--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,17 +2,7 @@
 
 body {
     font-family: var(--font-poppins), sans-serif;
+    background-color: #1A1A1A;
 }
-a,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    color: #EEEEEE;
-}
-
 
   
