--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,8 @@
 body {
     font-family: var(--font-poppins), sans-serif;
     background-color: #1A1A1A;
+    max-width: 1920px;
+    margin: 0 auto;
 }
 
   
